tests/files/type_checker_tests/should_fail/037.cmdr
//Should fail when dividing incompatible types
x = 3 / false;
